--- a/opensergo-dashboard-server/src/main/resources/application.yaml
+++ b/opensergo-dashboard-server/src/main/resources/application.yaml
@@ -13,7 +13,7 @@ server:
 
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/sentinel?useUnicode=true&characterEncoding=utf8&serverTimezone=Asia/Shanghai
+    url: jdbc:mysql://localhost:3306/opensergo?useUnicode=true&characterEncoding=utf8&serverTimezone=Asia/Shanghai
     username: root
     password:
 
