--- a/opensergo-dashboard-distribution/pom.xml
+++ b/opensergo-dashboard-distribution/pom.xml
@@ -3,7 +3,7 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <groupId>com.alibaba.opensergo</groupId>
+        <groupId>io.opensergo</groupId>
         <artifactId>opensergo-dashboard</artifactId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
@@ -13,14 +13,14 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.alibaba.opensergo</groupId>
+            <groupId>io.opensergo</groupId>
             <artifactId>opensergo-dashboard-ui</artifactId>
             <version>${project.version}</version>
             <scope>import</scope>
             <type>pom</type>
         </dependency>
         <dependency>
-            <groupId>com.alibaba.opensergo</groupId>
+            <groupId>io.opensergo</groupId>
             <artifactId>opensergo-dashboard-server</artifactId>
             <version>${project.version}</version>
             <scope>import</scope>
