--- a/opensergo-dashboard-server/pom.xml
+++ b/opensergo-dashboard-server/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>com.alibaba.opensergo</groupId>
+        <groupId>io.opensergo</groupId>
         <artifactId>opensergo-dashboard</artifactId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
@@ -21,7 +21,7 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.alibaba.opensergo</groupId>
+            <groupId>io.opensergo</groupId>
             <artifactId>opensergo-dashboard-ui</artifactId>
             <version>1.0.0-SNAPSHOT</version>
             <scope>import</scope>
@@ -72,7 +72,7 @@
         </dependency>
 
         <dependency>
-            <groupId>com.alibaba.opensergo</groupId>
+            <groupId>io.opensergo</groupId>
             <artifactId>opensergo-java</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
