--- a/opensergo-dashboard-ui/package.json
+++ b/opensergo-dashboard-ui/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sentinel-dashboard",
+  "name": "opensergo-dashboard",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
