--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.alibaba.opensergo</groupId>
+	<groupId>io.opensergo</groupId>
 	<artifactId>opensergo-dashboard</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
     <modules>
@@ -87,7 +87,7 @@
 		<profile>
 			<id>checkstyle</id>
 			<activation>
-				<jdk>[1.8,)</jdk>
+				<jdk>[11,)</jdk>
 			</activation>
 			<build>
 				<plugins>
