--- a/opensergo-dashboard-server/src/main/resources/application.yaml
+++ b/opensergo-dashboard-server/src/main/resources/application.yaml
@@ -30,7 +30,7 @@ logging:
 #auth settings
 auth:
   filter:
-    exclude-urls: /,/auth/login,/auth/logout,/registry/machine,/version
+    exclude-urls: /,/auth/login,/auth/logout,/registry/machine,/version,/api/application/**
     exclude-url-suffixes: htm,html,js,css,map,ico,ttf,woff,png
   # If auth.enabled=false, Sentinel console disable login
   username: sentinel
