--- a/opensergo-dashboard-ui/package.json
+++ b/opensergo-dashboard-ui/package.json
@@ -44,6 +44,7 @@
     "angular-ui-router": "^1.0.18",
     "angular-utils-pagination": "^0.11.1",
     "angularjs-bootstrap-datetimepicker": "^1.1.4",
+    "axios": "^0.26.1",
     "bootstrap-switch": "^3.3.4",
     "bootstrap-tagsinput": "~0.7.1",
     "dva": "^2.4.1",
@@ -53,6 +54,7 @@
     "ng-tags-input": "~3.0.0",
     "oclazyload": "^1.1.0",
     "react": "^16.8.6",
+    "react-axios": "^2.0.5",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^4.0.3",
