--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 		<fastjson-version>1.2.67</fastjson-version>
 		<jacoco-version>0.8.2</jacoco-version>
 		<apollo-version>1.2.0</apollo-version>
-		<guava-version>20.0</guava-version>
+		<guava-version>31.1-jre</guava-version>
 
 		<spring-boot-version>2.3.12.RELEASE</spring-boot-version>
 
