--- a/opensergo-dashboard-ui/package.json
+++ b/opensergo-dashboard-ui/package.json
@@ -4,14 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "legacy.build": "gulp build",
-    "legacy.start": "gulp",
+    "sentinel.build": "gulp build",
+    "sentinel.start": "gulp",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "homepage": "/build/",
+  "homepage": "/",
   "author": "x-cold <lxstart@outlook.com>",
   "license": "MIT",
   "proxy": "http://localhost:8080",
@@ -54,7 +54,6 @@
     "ng-tags-input": "~3.0.0",
     "oclazyload": "^1.1.0",
     "react": "^16.8.6",
-    "react-axios": "^2.0.5",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^4.0.3",
