--- a/opensergo-dashboard-distribution/pom.xml
+++ b/opensergo-dashboard-distribution/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>io.opensergo</groupId>
         <artifactId>opensergo-dashboard</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>0.0.1</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -16,15 +16,12 @@
             <groupId>io.opensergo</groupId>
             <artifactId>opensergo-dashboard-ui</artifactId>
             <version>${project.version}</version>
-            <scope>import</scope>
             <type>pom</type>
         </dependency>
         <dependency>
             <groupId>io.opensergo</groupId>
             <artifactId>opensergo-dashboard-server</artifactId>
             <version>${project.version}</version>
-            <scope>import</scope>
-            <type>pom</type>
         </dependency>
     </dependencies>
 
