--- a/opensergo-dashboard-ui/pom.xml
+++ b/opensergo-dashboard-ui/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>io.opensergo</groupId>
         <artifactId>opensergo-dashboard</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>0.0.1</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <packaging>pom</packaging>
