--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>io.opensergo</groupId>
 	<artifactId>opensergo-dashboard</artifactId>
-	<version>1.0.0-SNAPSHOT</version>
+	<version>0.0.1</version>
     <modules>
         <module>opensergo-dashboard-ui</module>
         <module>opensergo-dashboard-server</module>
@@ -25,6 +25,10 @@
 
 		<spring-boot-version>2.3.12.RELEASE</spring-boot-version>
 
+		<!-- Test libs -->
+		<junit.version>4.12</junit.version>
+		<mockito.version>2.28.2</mockito.version>
+
 		<maven.compiler.source>11</maven.compiler.source>
 		<maven.compiler.target>11</maven.compiler.target>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -40,26 +44,13 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-starter-parent</artifactId>
 				<version>${spring-boot-version}</version>
-				<scope>import</scope>
 				<type>pom</type>
 			</dependency>
-
 
 			<dependency>
 				<groupId>com.alibaba</groupId>
 				<artifactId>fastjson</artifactId>
 				<version>${fastjson-version}</version>
-			</dependency>
-
-			<dependency>
-				<groupId>io.springfox</groupId>
-				<artifactId>springfox-swagger2</artifactId>
-				<version>${springfox-swagger-version}</version>
-			</dependency>
-			<dependency>
-				<groupId>io.springfox</groupId>
-				<artifactId>springfox-swagger-ui</artifactId>
-				<version>${springfox-swagger-version}</version>
 			</dependency>
 
  			<dependency>
@@ -69,17 +60,17 @@
 			</dependency>
 
 			<dependency>
-				<groupId>org.apache.dubbo.extensions</groupId>
-				<artifactId>dubbo-mock-api</artifactId>
-				<version>${dubbo-mock-version}</version>
+				<groupId>junit</groupId>
+				<artifactId>junit</artifactId>
+				<version>${junit.version}</version>
+				<scope>test</scope>
 			</dependency>
-
 			<dependency>
-				<groupId>com.baomidou</groupId>
-				<artifactId>mybatis-plus-boot-starter</artifactId>
-				<version>${mybatis-plus-boot-version}</version>
+				<groupId>org.mockito</groupId>
+				<artifactId>mockito-core</artifactId>
+				<version>${mockito.version}</version>
+				<scope>test</scope>
 			</dependency>
-
 		</dependencies>
 	</dependencyManagement>
 
@@ -211,9 +202,12 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>2.21.0</version>
 			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>versions-maven-plugin</artifactId>
+				<version>2.7</version>
+			</plugin>
 		</plugins>
 	</build>
 
-
 </project>
-
