--- a/opensergo-dashboard-server/pom.xml
+++ b/opensergo-dashboard-server/pom.xml
@@ -74,7 +74,7 @@
         <dependency>
             <groupId>io.opensergo</groupId>
             <artifactId>opensergo-java</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <version>0.0.1</version>
         </dependency>
         <dependency>
             <groupId>io.grpc</groupId>
