--- a/opensergo-dashboard-ui/package.json
+++ b/opensergo-dashboard-ui/package.json
@@ -53,7 +53,7 @@
     "axios": "^0.26.1",
     "bootstrap-switch": "^3.3.4",
     "bootstrap-tagsinput": "~0.7.1",
-    "dva": "^2.4.1",
+    "dva": "^2.6.0-beta.20",
     "lodash": "^4.17.15",
     "moment": "^2.12.0",
     "ng-dialog": "^0.6.6",
