--- a/opensergo-dashboard-ui/package.json
+++ b/opensergo-dashboard-ui/package.json
@@ -28,6 +28,7 @@
     "@alicloud/console-components-app-layout": "^1.1.4",
     "@alicloud/console-components-console-menu": "^1.2.12",
     "@alicloud/console-components-page": "^1.0.18",
+    "@alicloud/console-components-slide-panel": "^2.2.14",
     "@alicloud/console-components-table": "^1.0.21",
     "@alicloudfe/components-console-menu": "^1.1.0",
     "@types/node": "^16.11.25",
@@ -62,6 +63,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "^4.0.3",
+    "sass": "^1.51.0",
     "selectize": "^0.12.1",
     "styled-components": "^4.3.2"
   },
